--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:gravity="center"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
+
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/mViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+
+    <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+        <ImageView
+                android:id="@+id/point1"
+                android:layout_width="10dp"
+                android:layout_height="10dp"/>
+        <ImageView
+                android:id="@+id/point2"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"/>
+        <ImageView
+                android:id="@+id/point3"
+                android:layout_width="10dp"
+                android:layout_height="10dp"/>
+
+    </LinearLayout>
+
+    <ImageView
+            android:id="@+id/iv_back"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="引导页"
-            android:textSize="30sp"/>
-
-</LinearLayout>
+    />
+</RelativeLayout>
